fix html spacing issue
-style.css
previously, the html was becoming misaligned due to the different lengths of the content inside the tag. now, we have fixed the length of those tags, so they'll stay lined up.

-misc
swapping in a smaller NPL logo.

other misc cleanup

--- a/static/style.css
+++ b/static/style.css
@@ -8,8 +8,9 @@ body {
     }
 .div2 {
         display: inline-block;
-        margin-left: 40pt;
-        margin-right: 40pt;
+        /* margin-left: 40pt;
+        margin-right: 40pt; */
+        width: 220pt;
     }
 header {
         color: azure;
